--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   .ban{height: 600px;
        position:relative;
        top:-120px;
-       background:url("./img/java01.jpg") center no-repeat;
+       background:url("java01.jpg") center no-repeat;
        background-size:contain cover;
        z-index:-1;
   }
@@ -99,7 +99,7 @@
     }
     .content>section:nth-child(2)>section>section>section>ul>li{
         padding: 5px 0 5px 40px;
-        background: url("./img/java07.svg") no-repeat left center;
+        background: url("java07.svg") no-repeat left center;
         font-size: 18px;
         color:#8492a6;
         text-align: left;
@@ -210,7 +210,7 @@
 <body>
 <header class="container">
   <section class="row header">
-    <section class="col-xs-6 clo-sm-6 col-md-2 col-lg-2 "><img src="./img/java02.png" alt=""></section>
+    <section class="col-xs-6 clo-sm-6 col-md-2 col-lg-2 "><img src="java02.png" alt=""></section>
     <section class="hidden-xs hidden-sm col-md-8 col-lg-8">
         <ul class="row ul ">
             <li class="hidden-xs hidden-sm col-md-2 col-lg-2"><a href="" class="ul">首页</a> </li>
@@ -225,7 +225,7 @@
     <section class="hidden-xs hidden-sm col-md-2 col-lg-2">
       <a href="" class="ul">登录/注册</a>
     </section>
-    <section class="col-xs-6 clo-sm-6 hidden-md hidden-lg"><img src="./img/java03.svg" alt=""></section>
+    <section class="col-xs-6 clo-sm-6 hidden-md hidden-lg"><img src="java03.svg" alt=""></section>
   </section>
 </header>
 
@@ -260,18 +260,18 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img src="./img/java10.jpg" alt="...">
+                <img src="java10.jpg" alt="...">
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
-                <img src="./img/java09.jpg" alt="...">
+                <img src="java09.jpg" alt="...">
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
                 <!--suppress HtmlUnknownTarget -->
-                <img alt="..." src="./img\java08.jpg">
+                <img alt="..." src="java08.jpg">
                 <div class="carousel-caption">
                 </div>
             </div>
@@ -301,7 +301,7 @@
     <section class="row">
         <section class="col-xs-12 col-sm-12 col-md-4 col-lg-4 ">
             <section>
-        <img src="./img/java04.jpg" alt="">
+        <img src="java04.jpg" alt="">
             <section class="row">
                 <h6 class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xs-push-1 col-sm-push-1 col-md-push-1 col-lg-push-1">周老师</h6>
             </section>
@@ -317,7 +317,7 @@
         </section>
         <section class="col-xs-12 col-sm-12 col-md-4 col-lg-4 java04">
             <section>
-            <img src="./img/java05.jpg" alt="">
+            <img src="java05.jpg" alt="">
             <section class="row">
                 <h6 class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xs-push-1 col-sm-push-1 col-md-push-1 col-lg-push-1">仓老师</h6>
             </section>
@@ -333,7 +333,7 @@
         </section>
         <section class="col-xs-12 col-sm-12 col-md-4 col-lg-4 java04">
             <section>
-            <img src="./img/java06.jpg" alt="">
+            <img src="java06.jpg" alt="">
             <section class="row">
                 <h6 class="col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xs-push-1 col-sm-push-1 col-md-push-1 col-lg-push-1">龙老师</h6>
             </section>
@@ -359,7 +359,7 @@
     <section class="container">
         <section class="row">
             <section class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                <img src="./img/java02.png" alt="">
+                <img src="java02.png" alt="">
                 <p>学习猿地根据IT方向的线上学习特点，研发人机互动教学系统， 打造领先的学习模式。平台签约了十名大牛联合创办， 每个合伙人再召集几名身边的技术大咖，根据程序员的岗位需求研发精品课程， 并将一门学科中所需要的全部学习资料汇总在一起， 且实时更新。 选中一门课程即拥有全部的精品学习资源，不需要再找其它资源补充。</p>
             </section>
             <section class="hidden-xs hidden-sm col-md-5 col-lg-5 flex">
@@ -398,7 +398,7 @@
                 </div>
             </section>
             <section class="col-xs12 col-sm-12 col-md-2 col-lg-2 fla">
-                <img src="./img/java08.png" alt="">
+                <img src="java08.png" alt="">
                 <s>学习猿地服务号</s>
 
 
